--- a/Templates/content_tabs_styled.html
+++ b/Templates/content_tabs_styled.html
@@ -1,29 +1,3 @@
-<p>
-    <a id="topmenu"></a>
-</p>
-
-<div class="grid-row">
-    <div class="col-xs-12 col-md-12">
-        <div class="styleguide-section__grid-demo-element">
-            <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; text-align: center;">
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175"><i class="icon-home"></i>
-                    <span>&nbsp;Home</span>
-                </a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/a-z" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/a-z" data-api-returntype="Page"><i class="icon-copy-course"></i>
-                    <span>&nbsp;All topics (A-Z)</span>
-                </a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page">&nbsp;<i class="icon-discussion-new">&nbsp;</i>Enroll</a>
-                <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i>
-                    <span>&nbsp;Contact</span>
-                </a>
-                <a class="btn Button" style="margin: 5px;" href="https://uvasocialsciences.eu.qualtrics.com/jfe/form/SV_6LN3bIFUlzyJ95k" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-compose"></i>
-                    <span>&nbsp;</span>Send us your feedback
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-
 
 <!-- Tab vakjes (aanklikbare menu) -->
 <div class="enhanceable_content tabs">
@@ -64,7 +38,7 @@
         <p>Tekst</p>
     </div>
 
-    <!-- ABOUT -->
+    <!-- About -->
     <div id="tab-1" style="background-color: #ffffff; height: auto; padding: 15px; padding-top: 20px;">
         <h3 style="text-align: center;">About</h3>
         <p>Tekst</p>
