--- a/ICTO Sub-account/Pilot (final grades)/CSS-stylesheet-subaccount-ictosw-pilot.css
+++ b/ICTO Sub-account/Pilot (final grades)/CSS-stylesheet-subaccount-ictosw-pilot.css
@@ -1,10 +1,15 @@
 /* Tabs */
 
-.enhanceable_content.tabs > a {
-    background-color: #ffffff;
-    margin: 5px;
-    height: 35px;
-    border: #000000;
+.enhanceable_content.tabs li {
+  background-color: #ffffff;
+}
+
+a[href*="tab"] {
+  background-color: #ffffff;
+  margin: 5px;
+  height: 35px;
+  border: #000000;
+  font-weight: bold;
 }
 
 
@@ -12,19 +17,21 @@
 /* ================ BASE - DO NOT REMOVE OR EDIT ================ */
 
 tr.channel:not(.default) td.email_meta {
-    visibility: hidden
+  visibility: hidden;
 }
 
 nav a.collaborations {
-    display: none !important
+  display: none !important;
 }
 
-table.profile_table.editing>tbody>tr :is(select#default_email_id, label[for=default_email_id]) {
-    display: none
+table.profile_table.editing
+  > tbody
+  > tr
+  :is(select#default_email_id, label[for="default_email_id"]) {
+  display: none;
 }
 
 /* ===================== END OF BASE ===================== */
-
 
 /*
 *
