--- a/ICTO-SW/Redesign/test.css
+++ b/ICTO-SW/Redesign/test.css
@@ -1,9 +1,9 @@
+/* Universal styles */
+
 #content-page /* Inhoud pagina */ {
     margin: 0;
     padding: 0;
-    border: 0;
-    border-left: 1px solid #efefef !important;
-    border-right: 1px solid #efefef !important;
+    border: 1px solid #efefef
 }
 
 .page-title /* Geen titel zichtbaar */ { 
