--- a/Templates/INSTRUCTION.html
+++ b/Templates/INSTRUCTION.html
@@ -7,44 +7,44 @@
     <a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i>
         <span>&nbsp;Back to top</span>
     </a>
-    <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/testvision" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/testvision"><span style="color: #08a8a2;"><i class="icon-home"></i><strong>&nbsp;TestVision homepage</strong></span></a>
     <a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/contact" target="_blank" rel="noopener" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i><span>&nbsp;Contact</span></a>
 </h5>
 <!-- Header -->
 <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-    <h4><strong>Can I distribute work among multiple graders?</strong></h4>
+    <h4><strong>Titel</strong></h4>
 </div>
 <!-- Instructie -->
 <div class="content-box pad-box-mini border border-trbl border-round" style="padding-bottom: 30px; padding-top: 35px;">
     <table style="height: 349px; width: 100%; border-collapse: collapse; border-style: hidden;" border="1">
         <tbody>
-            <!-- stap 1.1 -->
+            <!-- stap 1 -->
             <tr style="height: auto;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong>
                         <span style="font-size: 14pt;">1.</span>
                     </strong></td>
                 <td style="width: 90%; border-style: hidden; height: auto;"><strong>
-                    Go to the <span style="text-decoration: underline;">Grading</span> menu
+                    <span style="font-size: 13pt;"><strong>STAP</strong></span>
                 </strong></td>
             </tr>
-            <tr style="height: 201px; padding-bottom: 8px;">
+            <tr style="height: auto; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong>
                         <span style="font-size: 14pt;">&nbsp;</span>
                     </strong></td>
                 <td style="width: 90%; border-style: hidden; height: auto;">
-                    <img style="width: 20%; min-width: 200px;" id="5103271" src="https://canvas.uva.nl/courses/8175/files/5103271/preview" alt="finalgradesmenu.png" />
+                    <span style="font-size: 13pt;">PLAATJE OF TEKST</span>
+                    <br>
                     <br>
                     <br>
                 </td>
             </tr>
-            <!-- stap 1.2 -->
+            <!-- stap 2 -->
             <tr style="height: 45px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
                     <span style="font-size: 14pt;"><strong>2.</strong></span>
                 </td>
                 <td style="width: 89.5941%; height: 10px; border-style: hidden;">
-                    <strong>STAP</strong>
+                    <span style="font-size: 13pt;"><strong>STAP</strong></span>
                 </td>
             </tr>
             <tr>
@@ -52,18 +52,19 @@
                     <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
                 </td>
                 <td style="width: 89.5941%; border-style: hidden;">
-                    PLAATJE (OF TEKST)
+                    <span style="font-size: 13pt;">PLAATJE OF TEKST</span>
+                    <br>
                     <br>
                     <br>
                 </td>
             </tr>
-            <!-- stap 1.3 -->
+            <!-- stap 3 -->
             <tr style="height: 45px; padding-bottom: 8px;">
                 <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
                     <span style="font-size: 14pt;"><strong>3.</strong></span>
                 </td>
                 <td style="width: 89.5941%; height: 10px; border-style: hidden;">
-                    <strong>STAP</strong>
+                    <span style="font-size: 13pt;"><strong>STAP</strong></span>
                 </td>
             </tr>
             <tr>
@@ -71,7 +72,128 @@
                     <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
                 </td>
                 <td style="width: 89.5941%; border-style: hidden;">
-                    PLAATJE (OF TEKST)
+                    <span style="font-size: 13pt;">PLAATJE OF TEKST</span>
+                    <br>
+                    <br>
+                    <br>
+                </td>
+            </tr>
+            <!-- stap 4 -->
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
+                    <span style="font-size: 14pt;"><strong>4.</strong></span>
+                </td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
+                    <span style="font-size: 13pt;"><strong>STAP</strong></span>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 10.4059%; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 89.5941%; border-style: hidden;">
+                    <span style="font-size: 13pt;">PLAATJE OF TEKST</span>
+                    <br>
+                    <br>
+                    <br>
+                </td>
+            </tr>
+            <!-- stap 5 -->
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
+                    <span style="font-size: 14pt;"><strong>5.</strong></span>
+                </td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
+                    <span style="font-size: 13pt;"><strong>STAP</strong></span>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 10.4059%; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 89.5941%; border-style: hidden;">
+                    <span style="font-size: 13pt;">PLAATJE OF TEKST</span>
+                    <br>
+                    <br>
+                    <br>
+                </td>
+            </tr>
+            <!-- stap 6 -->
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
+                    <span style="font-size: 14pt;"><strong>6.</strong></span>
+                </td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
+                    <span style="font-size: 13pt;"><strong>STAP</strong></span>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 10.4059%; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 89.5941%; border-style: hidden;">
+                    <span style="font-size: 13pt;">PLAATJE OF TEKST</span>
+                    <br>
+                    <br>
+                    <br>
+                </td>
+            </tr>
+            <!-- stap 7 -->
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
+                    <span style="font-size: 14pt;"><strong>7.</strong></span>
+                </td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
+                    <span style="font-size: 13pt;"><strong>STAP</strong></span>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 10.4059%; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 89.5941%; border-style: hidden;">
+                    <span style="font-size: 13pt;">PLAATJE OF TEKST</span>
+                    <br>
+                    <br>
+                    <br>
+                </td>
+            </tr>
+            <!-- stap 8 -->
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
+                    <span style="font-size: 14pt;"><strong>8.</strong></span>
+                </td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
+                    <span style="font-size: 13pt;"><strong>STAP</strong></span>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 10.4059%; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 89.5941%; border-style: hidden;">
+                    <span style="font-size: 13pt;">PLAATJE OF TEKST</span>
+                    <br>
+                    <br>
+                    <br>
+                </td>
+            </tr>
+            <!-- stap 9 -->
+            <tr style="height: 45px; padding-bottom: 8px;">
+                <td style="width: 7%; border-style: hidden; height: auto; text-align: center;">
+                    <span style="font-size: 14pt;"><strong>9.</strong></span>
+                </td>
+                <td style="width: 89.5941%; height: 10px; border-style: hidden;">
+                    <span style="font-size: 13pt;"><strong>STAP</strong></span>
+                </td>
+            </tr>
+            <tr>
+                <td style="width: 10.4059%; border-style: hidden;">
+                    <span style="font-size: 14pt;"><strong>&nbsp;</strong></span>
+                </td>
+                <td style="width: 89.5941%; border-style: hidden;">
+                    <span style="font-size: 13pt;">PLAATJE OF TEKST</span>
+                    <br>
                     <br>
                     <br>
                 </td>
@@ -83,9 +205,6 @@
 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
     <a class="btn Button" style="margin: 3px;" href="#topmenu"> <i class="icon-arrow-up"></i>
         <span>&nbsp;Back to top</span>
-    </a>
-    <a class="btn Button--primary" style="margin: 3px;" href="#PLACEHOLDER"> <i class="icon-forward"></i>
-        <span>&nbsp;Next: PLACEHOLDER</em></span>
     </a>
 </div>
 
