update code icto con

--- a/Training/Templates/3_module.html
+++ b/Training/Templates/3_module.html
@@ -1,7 +1,7 @@
 <!-- Template 3: Module -->
 <!-- https://canvas.uva.nl/courses/56888/pages/3-module-voorbeeld-2 -->
  
-<div style="margin: 0; font-family: system-ui, -apple-system, Roboto, 'Segoe UI', Arial; background: #ffffff; border-radius: 12px; border:1px solid #e2e2e2">
+<div style="margin: 0; font-family: system-ui, -apple-system, Roboto, 'Segoe UI', Arial; background: #ffffff; border-radius: 12px; border:1px solid #e2e2e2; margin-bottom:20px;">
 
     <!-- Header -->
     <div style="text-align: left; padding: 15px 25px; background: #1B2631; color: #ffffff; border-radius: 12px 12px 0 0">
