--- a/Training/Templates/2_module_overzicht.html
+++ b/Training/Templates/2_module_overzicht.html
@@ -1,7 +1,7 @@
 <!-- Template 2: Modules -->
 <!-- https://canvas.uva.nl/courses/56888/pages/2-module-overzicht-2 -->
 
-  <table style="width: 100%; border-collapse: separate; border-spacing: 0 2px; background: #d4d4d4" cellpadding="12">
+  <table style="width: 100%; border-collapse: separate; border-spacing: 0 1.5px; background: #d4d4d4; margin-bottom:20px" cellpadding="12">
     <tbody style="background: #ffffff;">
       <tr>
         <td>
