--- a/Training/Templates/2_module_uitgebreid.html
+++ b/Training/Templates/2_module_uitgebreid.html
@@ -1,7 +1,7 @@
 <!-- Template 2: Module (uitgebreid) -->
 <!-- https://canvas.uva.nl/courses/56888/pages/2-module-voorbeeld-uitgebreid -->
 
-<div style="max-width: 1000px; margin: 0 auto; padding: 24px; font-family: system-ui, -apple-system, Roboto, 'Segoe UI', Arial; background: #f5f7fa;">
+<div style="max-width: 1000px; margin: 0 auto; padding: 24px; font-family: system-ui, -apple-system, Roboto, 'Segoe UI', Arial; background: #f5f7fa; margin-bottom:20px">
     
     <!-- Datum -->
     <div style="margin-bottom: 16px;">
