--- a/Templates/Canvas_homepage_1.html
+++ b/Templates/Canvas_homepage_1.html
@@ -1,7 +1,9 @@
 <!-- https://canvas.uva.nl/courses/42072 -->
 
 <!-- Banner -->
-<p><img src="https://canvas.uva.nl/courses/42072/files/9154811/preview" alt="202123-banners (17).png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/42072/files/9154811" data-api-returntype="File" /></p>
+<p>
+    <img src="https://canvas.uva.nl/courses/42072/files/9154811/preview" alt="202123-banners (17).png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/42072/files/9154811" data-api-returntype="File" />
+</p>
 
 <!-- Cursustitel-->
 <div class="content-box" style="background-color: #d1e2f4; padding: 30px;">
